rust/libsettings_wrapper.h

typedef unsigned int uint32_t;
typedef uint16_t _u16;
typedef uint32_t _u32;
#define u16 _u16
#define u32 _u32
#define bool _Bool
typedef unsigned long size_t;
typedef uint32_t size_t;
typedef struct libsettings_ctx_s {
    void *lock;
    void *condvar;
} libsettings_ctx_t;
bool c_libsettings_init(libsettings_ctx_t *ctx);
bool c_libsettings_lock(libsettings_ctx_t *ctx);
bool c_libsettings_unlock(libsettings_ctx_t *ctx);
bool c_libsettings_wait(libsettings_ctx_t *ctx, uint32_t ms);
bool c_libsettings_signal(libsettings_ctx_t *ctx);
bool c_libsettings_destroy(libsettings_ctx_t *ctx);