rust/libsettings-sys/src/bindings.rs

extern "C" {
    #[doc = " @brief   Write a new value for registered setting of type bool."]
    #[doc = " @details Call will block until write response or internal timeout."]
    #[doc = "          In case of multithreading, caller shall provide event object"]
    #[doc = "          that shall be used for waiting in wait_thd API function and"]
    #[doc = "          signaled in signal_thd API function. Also lock and unlock API"]
    #[doc = "          function implementations are mandatory when multithreading."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] event         Request specific event object."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[in] value         Value to be written."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval -1               Sending of the request failed."]
    #[doc = " @retval 0                The setting was written successfully."]
    #[doc = " @retval >0               Response returned an error @see settings_write_res_t"]
    pub fn settings_write_bool(
        ctx: *mut settings_t,
        event: *mut ::std::os::raw::c_void,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: bool,
    ) -> settings_write_res_t;
}
extern "C" {
    #[doc = " @brief   Read value of registered setting."]
    #[doc = " @details Call will block until read response or internal timeout."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[in] value         Address of the variable where the read value shall"]
    #[doc = " be written."]
    #[doc = " @param[in] value_len     Size of the value variable."]
    #[doc = " @param[in] type          Type of the setting."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval 0                The setting was read successfully. Error otherwise."]
    pub fn settings_read(
        ctx: *mut settings_t,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: *mut ::std::os::raw::c_void,
        value_len: size_t,
        type_: settings_type_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief   Read value of registered setting of type int."]
    #[doc = " @details Call will block until read response or internal timeout."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[out] value        Address of the variable where the read value shall"]
    #[doc = " be written."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval 0                The setting was read successfully. Error otherwise."]
    pub fn settings_read_int(
        ctx: *mut settings_t,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief   Read value of registered setting of type float."]
    #[doc = " @details Call will block until read response or internal timeout."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[out] value        Address of the variable where the read value shall"]
    #[doc = " be written."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval 0                The setting was read successfully. Error otherwise."]
    pub fn settings_read_float(
        ctx: *mut settings_t,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief   Read value of registered setting of type str."]
    #[doc = " @details Call will block until read response or internal timeout."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[out] str          Address of the variable where the read value shall"]
    #[doc = " be written."]
    #[doc = " @param[in] str_len       Size of the str buffer."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval 0                The setting was read successfully. Error otherwise."]
    pub fn settings_read_str(
        ctx: *mut settings_t,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        str_: *mut ::std::os::raw::c_char,
        str_len: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief   Read value of registered setting of type bool."]
    #[doc = " @details Call will block until read response or internal timeout."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] section       String describing the setting section."]
    #[doc = " @param[in] name          String describing the setting name."]
    #[doc = " @param[out] value        Address of the variable where the read value shall"]
    #[doc = " be written."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval 0                The setting was read successfully. Error otherwise."]
    pub fn settings_read_bool(
        ctx: *mut settings_t,
        section: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        value: *mut bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief   Read value of registered setting based on index."]
    #[doc = " @details Call will block until read_by_idx response or internal timeout."]
    #[doc = ""]
    #[doc = " @param[in] ctx           Pointer to the context to use."]
    #[doc = " @param[in] event         Request specific event object."]
    #[doc = " @param[in] idx           Index to read."]
    #[doc = " @param[out] section      String describing the setting section."]
    #[doc = " @param[in] section_len   Section str buffer size."]
    #[doc = " @param[out] name         String describing the setting name."]
    #[doc = " @param[in] name_len      Name str buffer size."]
    #[doc = " @param[out] value        String describing the setting value."]
    #[doc = " @param[in] value_len     Value str buffer size."]
    #[doc = " @param[out] type         String describing the setting type."]
    #[doc = " @param[in] type_len      Type str buffer size."]
    #[doc = ""]
    #[doc = " @return                  The operation result."]
    #[doc = " @retval 0                The setting was read successfully. Next index is"]
    #[doc = " ready to be read."]
    #[doc = " @retval <0               Error."]
    #[doc = " @retval >0               Last index was read successfully. There are no more"]
    #[doc = " indexes to read."]
    pub fn settings_read_by_idx(
        ctx: *mut settings_t,
        event: *mut ::std::os::raw::c_void,
        idx: u16,
        section: *mut ::std::os::raw::c_char,
        section_len: size_t,
        name: *mut ::std::os::raw::c_char,
        name_len: size_t,
        value: *mut ::std::os::raw::c_char,
        value_len: size_t,
        type_: *mut ::std::os::raw::c_char,
        type_len: size_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libsettings_ctx_s {
    pub lock: *mut ::std::os::raw::c_void,
    pub condvar: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_libsettings_ctx_s() {
    assert_eq!(
        ::std::mem::size_of::<libsettings_ctx_s>(),
        16usize,
        concat!("Size of: ", stringify!(libsettings_ctx_s))
    );
    assert_eq!(
        ::std::mem::align_of::<libsettings_ctx_s>(),
        8usize,
        concat!("Alignment of ", stringify!(libsettings_ctx_s))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<libsettings_ctx_s>())).lock as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(libsettings_ctx_s),
            "::",
            stringify!(lock)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<libsettings_ctx_s>())).condvar as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(libsettings_ctx_s),
            "::",
            stringify!(condvar)
        )
    );
}
pub type libsettings_ctx_t = libsettings_ctx_s;
extern "C" {
    pub fn c_libsettings_init(ctx: *mut libsettings_ctx_t) -> bool;
}
extern "C" {
    pub fn c_libsettings_lock(ctx: *mut libsettings_ctx_t) -> bool;
}
extern "C" {
    pub fn c_libsettings_unlock(ctx: *mut libsettings_ctx_t) -> bool;
}
extern "C" {
    pub fn c_libsettings_wait(ctx: *mut libsettings_ctx_t, ms: u32) -> bool;
}
extern "C" {
    pub fn c_libsettings_signal(ctx: *mut libsettings_ctx_t) -> bool;
}
extern "C" {
    pub fn c_libsettings_destroy(ctx: *mut libsettings_ctx_t) -> bool;
}
